deploy/manifests/app/backend/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 1karinav/avia-back:latest
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: 500Mi
          limits:
            cpu: "500m"
            memory: 1000Mi
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "500m"
            memory: 500Mi
          limits:
            cpu: "500m"
            memory: 1000Mi
      volumes:
      - name: postgres-data
        emptyDir: {}
